added some changes to my repo!

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <button type="button" class="btn btn-success"><i class="fa-solid fa-cart-shopping me-1 text-light "></i>Buy Now</button>
                         
                     </div>
-                    <div class="col ">
+                    <div class="col img-fluid max-width: 100%">
                         <img src="images/model.png" width="auto" height="auto" alt="">
                     </div>
                 </div>
