--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
 
         <main>
             <div class="container container-md container-sm">
-                <div class="row align-items-center ">
-                    <div class="col me-5 pe-5">
+                <div class="row align-items-center  d-flex">
+                    <div class="col-12  col-sm-12	col-md-5	col-lg-5	col-xl-5	col-xxl-5 me-5 pe-5">
                         <h1 class="text-warning display-3 ">
                             How to became 
                         </h1>
@@ -58,8 +58,8 @@
                         <button type="button" class="btn btn-success"><i class="fa-solid fa-cart-shopping me-1 text-light "></i>Buy Now</button>
                         
                     </div>
-                    <div class="col img-fluid max-width: 100%">
-                        <img src="images/model.png" width="auto" height="auto" alt="">
+                    <div class="col-12  col-sm-12	col-md-6	col-lg-6	col-xl-6	col-xxl-6  ">
+                        <img class="img-fluid " src="images/model.png" width="auto" height="auto" alt="">
                     </div>
                 </div>
             </div>
